[FIX] mail: message bubble color in dark theme more readable
Message bubble color in dark theme were too light grey, which
make text hard to read. Also the greyish tint makes discuss look
sad. White theme color are not much saturated, but the light
background makes it good enough in comparison.

This commit fixes the issue by darkening and adding more saturation
to message bubble in dark theme. This gives them a more mature look
with text more readable.

This commit makes similar improvement to important messaging menu
items in dark theme.

White theme color has been slightly improved with a bit more
color saturation on message bubble and notification item bg.

This PR also makes these other notable changes:
- shadow effects (message bubble, inputs, badges, etc.)
- message actions are horizontally more compact
- starred messages have starred icon in their sidebar
- useHover away timing is reduced to 100ms (down from 200ms), so that
  this feels snappier.
- chat bubble in mobile don't have close button: was too prone for
  accidental click with thumb
- thread banners have new style with floating rounded alerts
- chat window unread counter is next to name rather than always next
  to chat window quick actions.
- message bubbles in mobile do not go in the turf of bubbles in
  opposite alignment (i.e. more spacing at their end). Should make it
  easier to read conversation in mobile.

X-original-commit: 94469e82acd359eeb6536f4fb0b118ac7f83fff3

--- a/addons/mail/static/src/core/public_web/discuss_sidebar.scss
+++ b/addons/mail/static/src/core/public_web/discuss_sidebar.scss
@@ -1,7 +1,7 @@
 .o-mail-DiscussSidebar {
     box-shadow: 1px 0px 6px -3px rgba(50, 50, 50, 0.15);
     width: 60px;
-    --border-opacity: 0;
+    --border-opacity: 0.25;
 
     &:not(.o-compact) {
         width: $o-mail-Discuss-inspector;
@@ -27,6 +27,7 @@
 
 .o-mail-DiscussSidebar-item {
     outline: 1px solid transparent !important;
+    outline-offset: -1px;
     padding-top: map-get($spacers, 1) / 2;
     padding-bottom: map-get($spacers, 1) / 2;
 
@@ -45,7 +46,7 @@
 
     &.o-active {
         background-color: var(--mail-DiscussSidebar-itemActiveBgColor, mix($o-view-background-color, $o-action, 90%)) !important;
-        outline-color: var(--mail-DiscussSidebar-itemActiveOutlineColor, rgba($o-action, .15)) !important;
+        outline-color: var(--mail-DiscussSidebar-itemActiveOutlineColor, rgba($o-action, .05)) !important;
     }
 
     &.o-active, &:hover {
